name:                ivory-avr-generator
version:             0.1.0.0
synopsis:            Ivory binding generator for AVR registers
homepage:            https://github.com/erdeszt/ivory-avr-generator
license:             BSD3
license-file:        LICENSE
author:              erdeszt
maintainer:          erdeszt@gmail.com
copyright:           2020 erdeszt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ivory-avr-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , containers
                     , text
                     , vector
